--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,8 @@
 <!-- <app-directiva></app-directiva> -->
 <!-- <app-boostrap></app-boostrap> -->
 <!-- <app-pipes></app-pipes> -->
+<div class="container">
+    <h3>Titulo</h3>
+</div>
 <app-header></app-header>
 <router-outlet></router-outlet>
