--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,7 @@
 <!-- <app-pipes></app-pipes> -->
 <div class="container">
     <h3>Titulo</h3>
+  <label>Texto modificado en git</label>
 </div>
 <app-header></app-header>
 <router-outlet></router-outlet>
